CTT_Package/objects/Exposed_Contact_Review__c.object
<CustomObject>
    <description>This Object has all the necessary Details of Contacts Exposed to Positive Cases.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Patient_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Patient_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>It takes in the Name of the City of the Resident</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_contact_know_about_their_exposure__c</fullName>
        <label>Does contact know about their exposure ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>It takes the Email Address of the Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>It takes in the First Name of the Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_care_worker_or_facility__c</fullName>
        <label>Health care worker or facility?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>It takes in the Home Phone No. of the Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Household_Relationship__c</fullName>
        <label>Household Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Which_Facility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Yes, Which Facility ?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HealthCloudGA__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Exposure_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Exposure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>It takes in the Last Name of the Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>It takes the Middle Name of the Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>It takes the Mobile No. of the Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Web-Flow</fullName>
                </value>
                <value>
                    <fullName>Test Result</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_High_Risk_Exposure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other High Risk Exposure ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Is_A_Minor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the person is a Minor or Not !</description>
        <label>Person Is A Minor ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Case__c</fullName>
        <label>Relationship to Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_To_Contact_Trace_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To Contact Trace Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
                <value>
                    <fullName>Not Reviewed</fullName>
                </value>
                <value>
                    <fullName>Confirmed Pending Review</fullName>
                </value>
                <value>
                    <fullName>Not Confirmed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>It takes in the Details of the Street of the Resident</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Token</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Exposure__c</fullName>
        <label>Type of Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Close Friend/Associate</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Healthcare Setting</fullName>
                </value>
                <value>
                    <fullName>Air travel</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>It takes in the Work Phone of the Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>It takes in the Zip code of the place of Residence</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Exposed Contact For Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <columns>City__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Gender__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Household_Relationship__c</columns>
        <columns>Last_Exposure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECR-{0000}</displayFormat>
        <label>Exposed Contact Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exposed Contact For Reviews</pluralLabel>
    <recordTypes>
        <fullName>Agent_User</fullName>
        <active>true</active>
        <description>Agent User</description>
        <label>Agent User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community_User</fullName>
        <active>true</active>
        <label>Community User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>